--- a/Sentiment/Sentiment.vcxproj
+++ b/Sentiment/Sentiment.vcxproj
@@ -73,6 +73,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ExternalIncludePath>D:\Boost;D:\nlohmann-json\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</ExternalIncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ExternalIncludePath>D:\Boost;D:\nlohmann-json\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</ExternalIncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -124,12 +127,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Python-3-8\include;D:\Boost;D:\Info\class;D:\nlohmann-json\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Python-3-8\libs;D:\Boost\stage\lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -143,7 +149,7 @@
     <ClCompile Include="data\item\word.cpp" />
     <ClCompile Include="data\item\wordset.cpp" />
     <ClCompile Include="data\loader.cpp" />
-    <ClCompile Include="label\binance\loader.cpp" />
+    <ClCompile Include="label\binance\binance_loader.cpp" />
     <ClCompile Include="label\labeller\labeller.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="processing\filter\filter.cpp" />
@@ -169,7 +175,7 @@
     <ClInclude Include="data\item\wordset.hpp" />
     <ClInclude Include="data\loader.hpp" />
     <ClInclude Include="label\binance\klines.hpp" />
-    <ClInclude Include="label\binance\loader.hpp" />
+    <ClInclude Include="label\binance\binance_loader.hpp" />
     <ClInclude Include="label\labeller\labeller.hpp" />
     <ClInclude Include="processing\filter\filter.hpp" />
     <ClInclude Include="processing\stanza\stanza.hpp" />
